# faebooks

./: .gitignore  README.md  pyproject.toml
faebooks/: Dockerfile  faebooks.py  fly.toml  tweet.py
faebooks/app/: faebooks.py
faebooks/test/: scrapyard.py  test_faebot_ebooks.py  test_material_short.csv
faediscordbot/: faediscordbot.py
